--- a/app.json
+++ b/app.json
@@ -1,30 +1,38 @@
 {
-  "expo": {
-    "name": "EduqV2",
-    "slug": "EduqV2",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "expo": {
+        "name": "EduqV2",
+        "slug": "EduqV2",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/images/app-icon-all.png",
+        "userInterfaceStyle": "light",
+        "splash": {
+            "image": "./assets/images/splash-logo-all.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#081D49"
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/images/splash-logo-all.png",
+                "backgroundColor": "#ffffff"
+            }
+        },
+        "web": {
+            "favicon": "./assets/favicon.png"
+        },
+        "plugins": [
+            [
+                "expo-build-properties",
+                {
+                    "android": {
+                        "usesCleartextTraffic": true
+                    }
+                }
+            ]
+        ]
     }
-  }
 }
