--- a/package.json
+++ b/package.json
@@ -1,21 +1,46 @@
 {
-  "name": "eduqv2",
-  "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "expo": "~49.0.13",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-native": "0.72.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.0"
-  },
-  "private": true
+    "name": "eduqv2",
+    "version": "1.0.0",
+    "main": "node_modules/expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@react-native-async-storage/async-storage": "1.18.2",
+        "@react-navigation/bottom-tabs": "^6.5.9",
+        "@react-navigation/native": "^6.1.8",
+        "@react-navigation/native-stack": "^6.9.14",
+        "axios": "^1.5.1",
+        "expo": "~49.0.13",
+        "expo-build-properties": "~0.8.3",
+        "expo-file-system": "~15.4.4",
+        "expo-image-picker": "~14.3.2",
+        "expo-status-bar": "~1.6.0",
+        "formik": "^2.4.5",
+        "i18next": "23.4.5",
+        "mime": "^3.0.0",
+        "native-base": "^3.4.28",
+        "react": "18.2.0",
+        "react-i18next": "13.2.0",
+        "react-native": "0.72.5",
+        "react-native-numeric-input": "^1.9.1",
+        "react-native-picker-select": "^8.1.0",
+        "react-native-reanimated": "~3.3.0",
+        "react-native-recaptcha-that-works": "^2.0.0",
+        "react-native-safe-area-context": "4.6.3",
+        "react-native-screens": "~3.22.0",
+        "react-native-svg": "13.9.0",
+        "react-native-uuid": "^2.0.1",
+        "react-native-webview": "13.2.2",
+        "yarn": "^1.22.19",
+        "yup": "^1.3.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.20.0",
+        "react-native-dotenv": "^3.4.9"
+    },
+    "private": true
 }
