--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
         "react-native-recaptcha-that-works": "^2.0.0",
         "react-native-safe-area-context": "4.6.3",
         "react-native-screens": "~3.22.0",
-        "react-native-svg": "^13.14.0",
+        "react-native-svg": "13.9.0",
         "react-native-uuid": "^2.0.1",
         "react-native-webview": "13.2.2",
         "yarn": "^1.22.19",
