--- a/app.json
+++ b/app.json
@@ -32,6 +32,12 @@
                         "usesCleartextTraffic": true
                     }
                 }
+            ],
+            [
+                "expo-image-picker",
+                {
+                    "photosPermission": "custom photos permission"
+                }
             ]
         ]
     }
