--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@react-navigation/native-stack": "^6.9.14",
         "axios": "^1.5.1",
         "expo": "~49.0.13",
+        "expo-av": "~13.4.1",
         "expo-build-properties": "~0.8.3",
         "expo-file-system": "~15.4.4",
         "expo-image-picker": "~14.3.2",
