--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "expo": "~49.0.13",
         "expo-av": "~13.4.1",
         "expo-build-properties": "~0.8.3",
+        "expo-checkbox": "~2.4.0",
         "expo-file-system": "~15.4.4",
         "expo-image-picker": "~14.3.2",
         "expo-status-bar": "~1.6.0",
@@ -33,8 +34,10 @@
         "react-native-recaptcha-that-works": "^2.0.0",
         "react-native-safe-area-context": "4.6.3",
         "react-native-screens": "~3.22.0",
+        "react-native-sectioned-multi-select": "^0.10.0",
         "react-native-svg": "13.9.0",
         "react-native-uuid": "^2.0.1",
+        "react-native-vector-icons": "^10.0.0",
         "react-native-webview": "13.2.2",
         "yarn": "^1.22.19",
         "yup": "^1.3.2"
