--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 EDUQ='http://192.168.10.16/erp-eduq'
 AUTH='http://192.168.10.16/erp-auth'
-Qtest="http://localhost:6001"
+QTEST="http://192.168.10.16/erp-pronounciation"
 STORAGE="http://192.168.10.16/erp-storage"
 Cms="http://localhost:5003"
 
