--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@react-navigation/native": "^6.1.8",
         "@react-navigation/native-stack": "^6.9.14",
         "axios": "^1.5.1",
+        "buffer": "^6.0.3",
         "expo": "~49.0.13",
         "expo-av": "~13.4.1",
         "expo-build-properties": "~0.8.3",
@@ -27,7 +28,7 @@
         "native-base": "^3.4.28",
         "react": "18.2.0",
         "react-i18next": "13.2.0",
-        "react-native": "0.72.5",
+        "react-native": "0.72.6",
         "react-native-numeric-input": "^1.9.1",
         "react-native-picker-select": "^8.1.0",
         "react-native-reanimated": "~3.3.0",
