--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@react-navigation/native": "^6.1.8",
         "@react-navigation/native-stack": "^6.9.14",
         "axios": "^1.5.1",
+        "base-64": "^1.0.0",
         "buffer": "^6.0.3",
         "expo": "~49.0.13",
         "expo-av": "~13.4.1",
@@ -24,6 +25,7 @@
         "expo-status-bar": "~1.6.0",
         "formik": "^2.4.5",
         "i18next": "23.4.5",
+        "ky": "^1.1.2",
         "mime": "^3.0.0",
         "native-base": "^3.4.28",
         "react": "18.2.0",
