--- a/.env
+++ b/.env
@@ -1,15 +1,16 @@
-EDUQ='http://192.168.10.16/erp-eduq'
-AUTH='http://192.168.10.16/erp-auth'
-QTEST="http://192.168.10.16/erp-pronounciation"
-STORAGE="http://192.168.10.16/erp-storage"
-Cms="http://localhost:5003"
+# EDUQ='http://192.168.10.16/erp-eduq'
+# AUTH='http://192.168.10.16/erp-auth'
+# QTEST="http://192.168.10.16/erp-pronounciation"
+# STORAGE="http://192.168.10.16/erp-storage"
+# Cms="http://localhost:5003"
 
-# EduQ='https://eduq-service.hoctructuyentrans.com'
-# Auth='https://eduq-auth.hoctructuyentrans.com'
-# Qtest="https://eduq-qtest.hoctructuyentrans.com"
-# Storage="https://eduq-storage.hoctructuyentrans.com"
-# Cms="https://eduq-cms.hoctructuyentrans.com"
+EduQ='https://eduq-service.hoctructuyentrans.com'
+Auth='https://eduq-auth.hoctructuyentrans.com'
+Qtest="https://eduq-qtest.hoctructuyentrans.com"
+Storage="https://eduq-storage.hoctructuyentrans.com"
+Cms="https://eduq-cms.hoctructuyentrans.com"
 
+Domain="https://eduq.hoctructuyentrans.com"
 
 # recaptcha
 
