--- a/.env
+++ b/.env
@@ -4,13 +4,13 @@
 # STORAGE="http://192.168.10.16/erp-storage"
 # Cms="http://localhost:5003"
 
-EduQ='https://eduq-service.hoctructuyentrans.com'
-Auth='https://eduq-auth.hoctructuyentrans.com'
-Qtest="https://eduq-qtest.hoctructuyentrans.com"
-Storage="https://eduq-storage.hoctructuyentrans.com"
-Cms="https://eduq-cms.hoctructuyentrans.com"
+Auth='https://eduq.com.vn/v1/auth'
+Storage='https://eduq.com.vn/v1/storage'
+EduQ='https://eduq.com.vn/v1/eduq'
+Cms='https://eduq.com.vn/v1/cms'
+Qtest='https://eduq.com.vn/v1/qtest'
 
-Domain="https://eduq.hoctructuyentrans.com"
+Domain='https://eduq.hoctructuyentrans.com'
 
 # recaptcha
 
