--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
         "expo-build-properties": "~0.8.3",
         "expo-checkbox": "~2.4.0",
         "expo-file-system": "~15.4.5",
-        "expo-image-manipulator": "~11.3.0",
         "expo-image-picker": "~14.3.2",
+        "expo-screen-orientation": "~6.0.6",
         "expo-status-bar": "~1.6.0",
         "formik": "^2.4.5",
         "i18next": "23.4.5",
