--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "1.0.0",
     "main": "node_modules/expo/AppEntry.js",
     "scripts": {
-        "start": "expo start",
-        "android": "expo start --android",
-        "ios": "expo start --ios",
+        "start": "react-native start",
+        "android": "expo run:android",
+        "ios": "expo run:ios",
         "web": "expo start --web"
     },
     "dependencies": {
@@ -43,7 +43,8 @@
         "react-native-vector-icons": "^10.0.0",
         "react-native-webview": "13.2.2",
         "yarn": "^1.22.19",
-        "yup": "^1.3.2"
+        "yup": "^1.3.2",
+        "expo-splash-screen": "~0.20.5"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
