--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "expo-file-system": "~15.4.5",
         "expo-image-picker": "~14.3.2",
         "expo-screen-orientation": "~6.0.6",
+        "expo-splash-screen": "~0.20.5",
         "expo-status-bar": "~1.6.0",
         "formik": "^2.4.5",
         "i18next": "23.4.5",
@@ -31,6 +32,7 @@
         "react": "18.2.0",
         "react-i18next": "13.2.0",
         "react-native": "0.72.6",
+        "react-native-chart-kit": "^6.12.0",
         "react-native-numeric-input": "^1.9.1",
         "react-native-picker-select": "^8.1.0",
         "react-native-reanimated": "~3.3.0",
@@ -43,8 +45,7 @@
         "react-native-vector-icons": "^10.0.0",
         "react-native-webview": "13.2.2",
         "yarn": "^1.22.19",
-        "yup": "^1.3.2",
-        "expo-splash-screen": "~0.20.5"
+        "yup": "^1.3.2"
     },
     "devDependencies": {
         "@babel/core": "^7.20.0",
