--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,11 +93,11 @@ android {
     }
     signingConfigs {
         release {
-            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
-                storeFile file(MYAPP_UPLOAD_STORE_FILE)
-                storePassword MYAPP_UPLOAD_STORE_PASSWORD
-                keyAlias MYAPP_UPLOAD_KEY_ALIAS
-                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            if (project.hasProperty('EDUQ_UPLOAD_STORE_FILE')) {
+                storeFile file(EDUQ_UPLOAD_STORE_FILE)
+                storePassword EDUQ_UPLOAD_STORE_PASSWORD
+                keyAlias EDUQ_UPLOAD_KEY_ALIAS
+                keyPassword EDUQ_UPLOAD_KEY_PASSWORD
             }
         }
         debug {
