--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "expo": {
-        "name": "EduqV2",
-        "slug": "EduqV2",
+        "name": "EduQ",
+        "slug": "EduQ",
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/images/app-icon-all.png",
