--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -55,7 +55,7 @@ expo.webp.animated=false
 # Enable network inspector
 EX_DEV_CLIENT_NETWORK_INSPECTOR=true
 
-MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
-MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=123456
-MYAPP_UPLOAD_KEY_PASSWORD=123456
+EDUQ_UPLOAD_STORE_FILE=eduq.keystore
+EDUQ_UPLOAD_KEY_ALIAS=eduq
+EDUQ_UPLOAD_STORE_PASSWORD=Abc123@@
+EDUQ_UPLOAD_KEY_PASSWORD=Abc123@@
