--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "react-native-picker-select": "^8.1.0",
         "react-native-reanimated": "~3.3.0",
         "react-native-recaptcha-that-works": "^2.0.0",
+        "react-native-rename": "^3.2.14",
         "react-native-safe-area-context": "4.6.3",
         "react-native-screens": "~3.22.0",
         "react-native-sectioned-multi-select": "^0.10.0",
